@@ -1,7 +1,7 @@
 ;;; ai-code-interface.el --- AI code interface for editing AI prompt files -*- lexical-binding: t; -*-
 
 ;; Author: Kang Tu <tninja@gmail.com>
-;; Version: 0.31
+;; Version: 0.32
 ;; Package-Requires: ((emacs "26.1") (transient "0.8.0") (magit "2.1.0"))
 
 ;; SPDX-License-Identifier: Apache-2.0
@@ -139,8 +139,8 @@ Shows the current backend label to the right."
     ("f" "Fix Flycheck errors in scope" ai-code-flycheck-fix-errors-in-scope)
     ("k" "Copy Cur File Name (C-u: full)" ai-code-copy-buffer-file-name-to-clipboard)
     ("o" "Open Clipboard file dir" ai-code-open-clipboard-file-path-as-dired)
-    ("j" "Init projectile and tags" ai-code-init-project)
-    ("m" "Run MCP Inspector" ai-code-mcp-inspector-run)
+    ("." "Init projectile and tags" ai-code-init-project)
+    ("m" "Debug python MCP server" ai-code-debug-mcp)
     ("|" "Apply prompt on file" ai-code-apply-prompt-on-current-file)
     ]
    ])
