@@ -12,3 +12,4 @@
 - Chore: Enhance ai-code-shell-cmd to
   - handle region and improve input
   - be able to insert ai generated command to shell buffer
+- Feat: Add MCP debug command and customizable run options for Python files
